--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,10 @@
             <artifactId>java-jwt</artifactId>
             <version>3.18.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+         </dependency>
 
     </dependencies>
 
